# learning_candle

./: .gitignore  Cargo.toml  README.md
backup/bert-base-chinese/: Cargo.toml
backup/bert-base-chinese/src/: main.rs
backup/candle-roberta/: Cargo.toml
backup/candle-roberta/src/: main.rs
backup/dm2423/ch02/: Cargo.toml  unet.pth  unet.safetensors
backup/dm2423/ch02/src/: lib.rs
backup/learning_deep_learning/: README.md
backup/learning_deep_learning/ch01/: Cargo.toml
backup/learning_deep_learning/ch01/src/: main.rs
backup/learning_deep_learning/ch01_tensor/: Cargo.toml
backup/learning_deep_learning/ch03/: Cargo.toml
backup/learning_deep_learning/ch03/src/: main.rs
backup/mnist_linear/src/: main.rs
backup/pytorch_nlp/: README.md
backup/test_candle_core_utils/src/: main.rs
backup/test_hug_api/: Cargo.toml
backup/test_layer_norm/: Cargo.toml
backup/test_tensor/src/: lib.rs
candle-roberta/: Cargo.toml
candle-roberta/src/: main.rs
dm2423/ch02/: Cargo.toml
learning_deep_learning/ch01/: Cargo.toml
learning_deep_learning/ch01_tensor/: Cargo.toml
learning_deep_learning/ch01_tensor/src/: main.rs
mnist/: Cargo.toml
mnist-training/: Cargo.toml
mnist-training/src/: main.rs
mnist/src/: main.rs
mnist_linear/: Cargo.toml
mnist_linear/src/: main.rs
mnist_mlp/: Cargo.toml
mnist_mlp/src/: main.rs
pytorch_nlp/ch04/: Cargo.toml
pytorch_nlp/ch04/src/: main.rs
test_candle_core_utils/: Cargo.toml
test_hug_api/: Cargo.toml
test_hug_api/src/: main.rs
test_layer_norm/: Cargo.toml
test_layer_norm/src/: main.rs
test_tensor/: Cargo.toml
