[workspace]
resolver = "2"
members = [ "candle-roberta", "learning_deep_learning/ch01", "learning_deep_learning/ch01_tensor", "mnist", "mnist_linear", "pytorch_nlp/ch04", "test_candle_core_utils","test_hug_api", "test_layer_norm", "test_tensor"]

[workspace.dependencies]
anyhow = "1.0.86"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["metal", "accelerate"] }
candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["metal", "accelerate"] }
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
clap = { version = "4.2.4", features = ["derive"] }
rand = "0.8.5"
hf-hub = "0.3.2"
serde = "1.0.203"
serde_json = "1.0.117"
tokenizers = "0.19.1"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
