[workspace]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.86"
candle-core = { git = "https://github.com/kigichang/candle.git", version = "0.6.1", features = ["metal", "accelerate"] }
candle-datasets = { git = "https://github.com/kigichang/candle.git", version = "0.6.1" }
candle-nn = { git = "https://github.com/kigichang/candle.git", version = "0.6.1", features = ["metal", "accelerate"] }
candle-metal-kernels = { git = "https://github.com/kigichang/candle.git", version = "0.6.1" }
candle-transformers = { git = "https://github.com/kigichang/candle.git", version = "0.6.1" }
safetensors = "0.4.3"
clap = { version = "4.2.4", features = ["derive"] }
rand = "0.8.5"
hf-hub = "0.3.2"
serde = "1.0.203"
serde_json = "1.0.117"
tokenizers = "0.19.1"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
plotters = "0.3.6"