[package]
name = "candle-roberta"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", tag = "0.5.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", tag = "0.5.1" }
hf-hub = "0.3.2"
serde = "1.0.203"
serde_json = "1.0.117"
tokenizers = "0.19.1"
