[package]
name = "bert-base-chinese"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }
safetensors = { workspace = true }