[package]
name = "ch04"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", tag = "0.5.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", tag = "0.5.1" }
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
